# gh-linguist

./: LICENSE  README.md  pyproject.toml  setup.py
linguist/: __init__.py
linguist/libs/: blob_helper.py  generated.py  language.py  repository.py  tokenizer.py
